RESOLVED FIXED235288
BaseAudioSharedUnit::devicesChanged is failing capture too much in GPUProcess
https://bugs.webkit.org/show_bug.cgi?id=235288
Summary BaseAudioSharedUnit::devicesChanged is failing capture too much in GPUProcess
youenn fablet
Reported 2022-01-17 00:15:23 PST
BaseAudioSharedUnit::devicesChanged is failing capture too much
Attachments
Patch (1.87 KB, patch)
2022-01-17 00:25 PST, youenn fablet
no flags
Patch (1.87 KB, patch)
2022-01-17 00:31 PST, youenn fablet
no flags
youenn fablet
Comment 1 2022-01-17 00:25:56 PST
youenn fablet
Comment 2 2022-01-17 00:31:21 PST
EWS
Comment 3 2022-01-17 23:55:38 PST
Committed r288110 (246124@main): <https://commits.webkit.org/246124@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 449315 [details].
Radar WebKit Bug Importer
Comment 4 2022-01-17 23:56:21 PST
Note You need to log in before you can comment on or make changes to this bug.